  check whether the parent directory is writeable, else fallback to ${HOME}
- when setting destination directory for created files, check if they are
  writeable, else fallback to ${HOME}
- fix telling user path to Hans Files for all Pokemon game hacks
- make the script more robust against directories with spaces in their names

::configuration file changes
- new configuration variable PATCHIMAGE_3DS_DIR, global directory
  where to look for unmodified 3DS ROM files
- new configuration variable PATCHIMAGE_ROM_DIR, global directory
  where to store your modified 3DS ROM files

::documentation
- update README.RC
- update README.STATUS_CODES
- update README.GAMEIDS

::misc. changes
- show full path for Hans Files for all games, instead of relative
- only show path to Hans files if they exist
- when downloading covers for Wii games fail, retry with the US cover
- don't re-download covers that already exist
- don't re-download soundtracks that already exist

::game additions

::::New Super Mario Bros. Wii
- add support for Revised Super Mario Bros. Wii

::::Pokemon
- add support for Pokemon Eternal X
  - choose between legal, rebalanced and insanity version
  - for legal and rebalanced, choose whether to nerf first gym leader
- add support for Pokemon Wilting Y
  - choose between legal, rebalanced and insanity version
  - for legal and rebalanced, choose whether to nerf first gym leader
- add support for Pokemon Rising Ruby
  - provide custom Hans banner and launcher
- add support for Pokemon Sinking Sapphire
  - provide custom Hans banner and launcher

::::Other
- add support for Bravely Second Uncensored

::game changes and updates
- update download link for Pokemon Rutile Ruby to v2.1
- update download link for Pokemon Star Sapphire to v2.1

v6.3.0:
- supply ctrtool (32 and 64 bit versions)
- supply 3dstool (32 and 64 bit versions)
- add support for Pokemon Neo X
  - choose between full and lite version
  - provide custom HANS banner and launcher